# roguelike

./: .gitignore  CMakeLists.txt  Makefile  Roguelike.cpp  a  animated_sprite.cpp  animated_sprite.hpp  animation.cpp  animation.hpp  animation_editor.cpp  animation_editor.hpp  animation_manager.cpp  animation_manager.hpp  b  debug_renderer.cpp  debug_renderer.hpp  editor.cpp  editor.hpp  entity.cpp  entity.hpp  error.cpp  error.hpp  event_manager.cpp  event_manager.hpp  game.cpp  game.hpp  game_ai.cpp  game_ai.hpp  game_event_manager.cpp  game_event_manager.hpp  game_player.cpp  game_player.hpp  game_state.cpp  game_state.hpp  gamestate.cpp  gamestate.hpp  hotload_sprite.cpp  hotload_sprite.hpp  imgui_window.cpp  imgui_window.hpp  (+50 more)
_win32/: Roguelike.sln  Roguelike.vcxproj  editor.vcxproj
config/: animation_config.pb
protocol/: animation_config.pb.cc  animation_config.pb.h  animation_config.proto  spell_config.pb.cc  spell_config.pb.h  spell_config.proto  sprite.pb.cc  sprite.pb.h  sprite.proto
